--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://barraxmenkrep.blogspot.com/" />
     <title>MF Shop - Skibidi PC</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,4 +28,5 @@
 </section>
 <link rel="script" href="main.js">
 </body>
+
 </html>
